default/objects/Account/fields/CCS_Fuel_card_competition__c.field-meta.xml
<CustomField>
    <fullName>CCS_Fuel_card_competition__c</fullName>
    <label>CCS Fuel card competition</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Shell</fullName>
            </value>
            <value>
                <fullName>OMV</fullName>
            </value>
            <value>
                <fullName>Benzina</fullName>
            </value>
            <value>
                <fullName>LukOil</fullName>
            </value>
            <value>
                <fullName>PapOil</fullName>
            </value>
            <value>
                <fullName>RobinOil</fullName>
            </value>
            <value>
                <fullName>ENI</fullName>
            </value>
            <value>
                <fullName>EuroWag</fullName>
            </value>
            <value>
                <fullName>Čepro</fullName>
            </value>
            <value>
                <fullName>TankOno</fullName>
            </value>
            <value>
                <fullName>Slovnaft</fullName>
            </value>
            <value>
                <fullName>Erneks Inv.</fullName>
            </value>
            <value>
                <fullName>Vlastní ČS</fullName>
            </value>
            <value>
                <fullName>DKV</fullName>
            </value>
            <value>
                <fullName>AS24</fullName>
            </value>
            <value>
                <fullName>bankovní</fullName>
            </value>
            <value>
                <fullName>místní ČS</fullName>
            </value>
            <value>
                <fullName>hotovost</fullName>
            </value>
            <value>
                <fullName>MOL</fullName>
            </value>
            <value>
                <fullName>lokální závozy na stavby</fullName>
            </value>
            <value>
                <fullName>Fuelomat</fullName>
            </value>
            <value>
                <fullName>lokální kredit</fullName>
            </value>
            <value>
                <fullName>Tankomat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>