default/objects/Account/fields/CCS_GFN_number__c.field-meta.xml
<CustomField>
    <fullName>CCS_GFN_number__c</fullName>
    <description>Removed External System type per Stepan --Cathy Schneider-Lewis 23jan2017</description>
    <label>GFN číslo</label>
    <length>8</length>
    <type>Text</type>
</CustomField>