default/objects/Account/fields/CCS_GFNstatus__c.field-meta.xml
<CustomField>
    <fullName>CCS_GFNstatus__c</fullName>
    <label>CCS_GFNstatus</label>
    <length>50</length>
    <type>Text</type>
</CustomField>