default/objects/Account/fields/CCS_In_negotiation__c.field-meta.xml
<CustomField>
    <fullName>CCS_In_negotiation__c</fullName>
    <label>CCS In negotiation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ano</fullName>
            </value>
            <value>
                <fullName>ne</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>