default/objects/Account/fields/CCS_In_negotiation_yes__c.field-meta.xml
<CustomField>
    <fullName>CCS_In_negotiation_yes__c</fullName>
    <label>CCS In negotiation - yes</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daníček</fullName>
            </value>
            <value>
                <fullName>Peška</fullName>
            </value>
            <value>
                <fullName>Turnerová</fullName>
            </value>
            <value>
                <fullName>Filípek</fullName>
            </value>
            <value>
                <fullName>Staňková</fullName>
            </value>
            <value>
                <fullName>Ouřadová</fullName>
            </value>
            <value>
                <fullName>Baštářová</fullName>
            </value>
            <value>
                <fullName>Nováková</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>