default/objects/Account/fields/CCS_Kontaktov_no__c.field-meta.xml
<CustomField>
    <fullName>CCS_Kontaktov_no__c</fullName>
    <label>CCS Kontaktováno</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ano</fullName>
            </value>
            <value>
                <fullName>ne</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>