default/objects/Account/fields/CCS_Kontaktov_no_ANO__c.field-meta.xml
<CustomField>
    <fullName>CCS_Kontaktov_no_ANO__c</fullName>
    <label>CCS Kontaktováno ANO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>email</fullName>
            </value>
            <value>
                <fullName>telefon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>