default/objects/Account/fields/CCS_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>CCS_Lead_Source__c</fullName>
    <description>Transfered copy of Lead.CCS_Lead_Source.</description>
    <label>CCS Lead Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>