default/objects/Account/fields/CCS_Leasing_company__c.field-meta.xml
<CustomField>
    <fullName>CCS_Leasing_company__c</fullName>
    <label>CCS Leasing company</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ALD</fullName>
            </value>
            <value>
                <fullName>Arval</fullName>
            </value>
            <value>
                <fullName>Businesslease</fullName>
            </value>
            <value>
                <fullName>ČSOB Leasing</fullName>
            </value>
            <value>
                <fullName>Leaseplan</fullName>
            </value>
            <value>
                <fullName>ŠkoFin</fullName>
            </value>
            <value>
                <fullName>Jiný</fullName>
            </value>
            <value>
                <fullName>SpeedLease</fullName>
            </value>
            <value>
                <fullName>sAutoleasing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>