default/objects/Account/fields/CCS_Merlin_Order_Button__c.field-meta.xml
<CustomField>
    <fullName>CCS_Merlin_Order_Button__c</fullName>
    <formula>IF(
            TEXT(BillingCountryCode) = "SK",
            "sk",
            "cz")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCS Merlin Order Button</label>
    <type>Text</type>
</CustomField>