default/objects/Account/fields/CCS_Merlin_Order_Button_Address__c.field-meta.xml
<CustomField>
    <fullName>CCS_Merlin_Order_Button_Address__c</fullName>
    <formula>"www.ccs"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCS Merlin Order Button Address</label>
    <type>Text</type>
</CustomField>