default/objects/Account/fields/CCS_MonitorCount__c.field-meta.xml
<CustomField>
    <fullName>CCS_MonitorCount__c</fullName>
    <label>CCS_MonitorCount</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>