default/objects/Account/fields/CCS_Monitoring__c.field-meta.xml
<CustomField>
    <fullName>CCS_Monitoring__c</fullName>
    <label>CCS Monitoring</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CCS Carnet</fullName>
            </value>
            <value>
                <fullName>O2 Car Control</fullName>
            </value>
            <value>
                <fullName>Princip</fullName>
            </value>
            <value>
                <fullName>Level</fullName>
            </value>
            <value>
                <fullName>T-Cars</fullName>
            </value>
            <value>
                <fullName>Oni system</fullName>
            </value>
            <value>
                <fullName>Radium</fullName>
            </value>
            <value>
                <fullName>GX Solutions (Axitech)</fullName>
            </value>
            <value>
                <fullName>ECS System</fullName>
            </value>
            <value>
                <fullName>Sherlog</fullName>
            </value>
            <value>
                <fullName>Patriot</fullName>
            </value>
            <value>
                <fullName>K-Elektronik</fullName>
            </value>
            <value>
                <fullName>Kapsch</fullName>
            </value>
            <value>
                <fullName>Comtes</fullName>
            </value>
            <value>
                <fullName>R-Altra</fullName>
            </value>
            <value>
                <fullName>My Systems</fullName>
            </value>
            <value>
                <fullName>F&amp;B COMP Olomouc</fullName>
            </value>
            <value>
                <fullName>Sixt</fullName>
            </value>
            <value>
                <fullName>Milk Computers</fullName>
            </value>
            <value>
                <fullName>Evotech</fullName>
            </value>
            <value>
                <fullName>Fons</fullName>
            </value>
            <value>
                <fullName>Altas</fullName>
            </value>
            <value>
                <fullName>Protank</fullName>
            </value>
            <value>
                <fullName>RC System</fullName>
            </value>
            <value>
                <fullName>WebEye</fullName>
            </value>
            <value>
                <fullName>Torola</fullName>
            </value>
            <value>
                <fullName>TomTom</fullName>
            </value>
            <value>
                <fullName>Autoawacs</fullName>
            </value>
            <value>
                <fullName>Echoton</fullName>
            </value>
            <value>
                <fullName>Echo Tract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>