default/objects/Account/fields/CCS_Monthly_liters__c.field-meta.xml
<CustomField>
    <fullName>CCS_Monthly_liters__c</fullName>
    <formula>( CCS_CardCountBuss__c + CCS_CardCountLimit__c + CCS_CardCountUTA__c )* if( ISPICKVAL(CCS_Segment__c,"KAM"), 130 , if(ISPICKVAL(CCS_Segment__c,"LAM"), 130 , 200 ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCS Monthly liters</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>