default/objects/Account/fields/CCS_Nab_dnuto__c.field-meta.xml
<CustomField>
    <fullName>CCS_Nab_dnuto__c</fullName>
    <label>CCS Nabídnuto</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TankNavigator</fullName>
            </value>
            <value>
                <fullName>Parkování</fullName>
            </value>
            <value>
                <fullName>E-shop</fullName>
            </value>
            <value>
                <fullName>Cestovní pojištění AIG</fullName>
            </value>
            <value>
                <fullName>Síť CNG</fullName>
            </value>
            <value>
                <fullName>Automatické pojištění</fullName>
            </value>
            <value>
                <fullName>Bonus</fullName>
            </value>
            <value>
                <fullName>Cestovní pojištění ERV</fullName>
            </value>
            <value>
                <fullName>Zrušení skupiny zboží 5 a 6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>