default/objects/Account/fields/CCS_Names__c.field-meta.xml
<CustomField>
    <fullName>CCS_Names__c</fullName>
    <label>CCS Names</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Neznámo</fullName>
            </value>
            <value>
                <fullName>Bronislava Štajerová</fullName>
            </value>
            <value>
                <fullName>Iveta Baštářová</fullName>
            </value>
            <value>
                <fullName>Vladimíra Ouřadová</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>