default/objects/Account/fields/CCS_Note__c.field-meta.xml
<CustomField>
    <fullName>CCS_Note__c</fullName>
    <description>For Attrition department</description>
    <label>CCS Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>