default/objects/Account/fields/CCS_Offered_products__c.field-meta.xml
<CustomField>
    <fullName>CCS_Offered_products__c</fullName>
    <label>CCS Offered products</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>karty</fullName>
            </value>
            <value>
                <fullName>monitoring</fullName>
            </value>
            <value>
                <fullName>aukce</fullName>
            </value>
            <value>
                <fullName>bonus</fullName>
            </value>
            <value>
                <fullName>trucks</fullName>
            </value>
            <value>
                <fullName>mýto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>