default/objects/Account/fields/CCS_other_heavy_machinery_over_3_5t__c.field-meta.xml
<CustomField>
    <fullName>CCS_other_heavy_machinery_over_3_5t__c</fullName>
    <label>Number of other vehicles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>