default/objects/Account/fields/CCS_own_filling_station__c.field-meta.xml
<CustomField>
    <fullName>CCS_own_filling_station__c</fullName>
    <label>CCS own filling station</label>
    <length>255</length>
    <type>Text</type>
</CustomField>