default/objects/Account/fields/CCS_parent_ID__c.field-meta.xml
<CustomField>
    <fullName>CCS_parent_ID__c</fullName>
    <description>ONLY for migration!</description>
    <label>CCS_parent_ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>