default/objects/Account/fields/CCS_Primary_fueling_method__c.field-meta.xml
<CustomField>
    <fullName>CCS_Primary_fueling_method__c</fullName>
    <label>CCS Primary fueling method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bankovní karta</fullName>
            </value>
            <value>
                <fullName>Bankovní karta&amp;Hotovost</fullName>
            </value>
            <value>
                <fullName>Hotovost</fullName>
            </value>
            <value>
                <fullName>Jiný</fullName>
            </value>
            <value>
                <fullName>Karta CCS</fullName>
            </value>
            <value>
                <fullName>Karta leasingové společnosti</fullName>
            </value>
            <value>
                <fullName>Karta řetězce ČS</fullName>
            </value>
            <value>
                <fullName>Lokální kredit</fullName>
            </value>
            <value>
                <fullName>neznámo</fullName>
            </value>
            <value>
                <fullName>Vlastní bencalor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>