default/objects/Account/fields/CCS_Retention_Competition__c.field-meta.xml
<CustomField>
    <fullName>CCS_Retention_Competition__c</fullName>
    <label>CCS Retention Competition</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CCS_Retention_Flag__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Shell</fullName>
            </value>
            <value>
                <fullName>Benzina</fullName>
            </value>
            <value>
                <fullName>OMV</fullName>
            </value>
            <value>
                <fullName>MOL (Slovnaft, ENI, PapOil, LukOil)</fullName>
            </value>
            <value>
                <fullName>RobinOil</fullName>
            </value>
            <value>
                <fullName>TankOno</fullName>
            </value>
            <value>
                <fullName>Bankovní karta</fullName>
            </value>
            <value>
                <fullName>Hotovost</fullName>
            </value>
            <value>
                <fullName>Jiné</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>