default/objects/Account/fields/CCS_Retention_Flag__c.field-meta.xml
<CustomField>
    <fullName>CCS_Retention_Flag__c</fullName>
    <label>CCS Retention Flag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>neznámo</fullName>
            </value>
            <value>
                <fullName>důvod neuveden</fullName>
            </value>
            <value>
                <fullName>kreditní důvody</fullName>
            </value>
            <value>
                <fullName>změna subjektu</fullName>
            </value>
            <value>
                <fullName>reorganizace</fullName>
            </value>
            <value>
                <fullName>konkurence</fullName>
            </value>
            <value>
                <fullName>neaktivní smlouva</fullName>
            </value>
            <value>
                <fullName>jiné</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>