default/objects/Account/fields/CCS_Retention_success__c.field-meta.xml
<CustomField>
    <fullName>CCS_Retention_success__c</fullName>
    <label>CCS Retention success</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>zájem</fullName>
            </value>
            <value>
                <fullName>nezájem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>