default/objects/Account/fields/CCS_retention_type__c.field-meta.xml
<CustomField>
    <fullName>CCS_retention_type__c</fullName>
    <label>CCS retention type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>inbound retention</fullName>
            </value>
            <value>
                <fullName>outbound retention - care</fullName>
            </value>
            <value>
                <fullName>outbound retention - campaign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>