default/objects/Account/fields/CCS_Segment__c.field-meta.xml
<CustomField>
    <fullName>CCS_Segment__c</fullName>
    <label>CCS Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Large Account (LAM)</fullName>
            </value>
            <value>
                <fullName>KAM</fullName>
            </value>
            <value>
                <fullName>LAM</fullName>
            </value>
            <value>
                <fullName>SME</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>