default/objects/Account/fields/CCS_Telco_operator__c.field-meta.xml
<CustomField>
    <fullName>CCS_Telco_operator__c</fullName>
    <label>CCS Telco operator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>T-Mobile</fullName>
            </value>
            <value>
                <fullName>Telefonica O2</fullName>
            </value>
            <value>
                <fullName>Vodafone</fullName>
            </value>
            <value>
                <fullName>Jiný</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>