default/objects/Account/fields/CCS_US_instance_ID__c.field-meta.xml
<CustomField>
    <fullName>CCS_US_instance_ID__c</fullName>
    <description>ONLY FOR MIGRATION PROCESS!!!</description>
    <externalId>true</externalId>
    <inlineHelpText>ONLY FOR MIGRATION PROCESS!!!</inlineHelpText>
    <label>CCS US instance ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>