default/objects/Account/fields/CCS_vans_up_to_3_5__c.field-meta.xml
<CustomField>
    <fullName>CCS_vans_up_to_3_5__c</fullName>
    <label>CCS vans up to 3,5</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>