default/objects/Account/fields/Channel_for_Leadsubmitting__c.field-meta.xml
<CustomField>
    <fullName>Channel_for_Leadsubmitting__c</fullName>
    <label>Channel for Leadsubmitting</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retailer Portal</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>E-Mail</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>