default/objects/Account/fields/Checking_Account__c.field-meta.xml
<CustomField>
    <fullName>Checking_Account__c</fullName>
    <description>Рассчетный счет</description>
    <label>Checking account</label>
    <length>30</length>
    <type>Text</type>
</CustomField>