default/objects/Account/fields/CID__c.field-meta.xml
<CustomField>
    <fullName>CID__c</fullName>
    <label>CID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>