default/objects/Account/fields/client_channel__c.field-meta.xml
<CustomField>
    <fullName>client_channel__c</fullName>
    <description>Client Channel as held in GFN for reconciliation reporting</description>
    <inlineHelpText>Client Channel as held in GFN for reconciliation reporting</inlineHelpText>
    <label>GFN Client Channel</label>
    <length>25</length>
    <type>Text</type>
</CustomField>