default/objects/Account/fields/Cluster_ID__c.field-meta.xml
<CustomField>
    <fullName>Cluster_ID__c</fullName>
    <label>Cluster ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>