default/objects/Account/fields/Cluster_Name__c.field-meta.xml
<CustomField>
    <fullName>Cluster_Name__c</fullName>
    <label>Cluster Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>