default/objects/Account/fields/Cluster_Owner_Exploitant__c.field-meta.xml
<CustomField>
    <fullName>Cluster_Owner_Exploitant__c</fullName>
    <label>Cluster Owner/Exploitant</label>
    <length>100</length>
    <type>Text</type>
</CustomField>