default/objects/Account/fields/Cluster_password__c.field-meta.xml
<CustomField>
    <fullName>Cluster_password__c</fullName>
    <description>Used for Cluster view for the JITB portal - Shell CZ, SK, HU, PL</description>
    <label>Cluster password</label>
    <length>20</length>
    <type>Text</type>
</CustomField>