default/objects/Account/fields/CM_e_mail_address__c.field-meta.xml
<CustomField>
    <fullName>CM_e_mail_address__c</fullName>
    <label>CM e-mail address</label>
    <length>150</length>
    <type>Text</type>
</CustomField>