default/objects/Account/fields/CM_mobile__c.field-meta.xml
<CustomField>
    <fullName>CM_mobile__c</fullName>
    <label>CM mobile</label>
    <type>Phone</type>
</CustomField>