default/objects/Account/fields/Code_Word__c.field-meta.xml
<CustomField>
    <fullName>Code_Word__c</fullName>
    <label>Code Word</label>
    <length>100</length>
    <type>Text</type>
</CustomField>