default/objects/Account/fields/ColCo__c.field-meta.xml
<CustomField>
    <fullName>ColCo__c</fullName>
    <label>ColCo</label>
    <length>8</length>
    <type>Text</type>
</CustomField>