default/objects/Account/fields/Cold_Lead__c.field-meta.xml
<CustomField>
    <fullName>Cold_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cold Lead</label>
    <type>Checkbox</type>
</CustomField>