default/objects/Account/fields/Company_form_Crif__c.field-meta.xml
<CustomField>
    <fullName>Company_form_Crif__c</fullName>
    <label>Company form (Crif)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>