default/objects/Account/fields/Company_Legal_Name1__c.field-meta.xml
<CustomField>
    <fullName>Company_Legal_Name1__c</fullName>
    <label>Full Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>