default/objects/Account/fields/Company_Reg_Number__c.field-meta.xml
<CustomField>
    <fullName>Company_Reg_Number__c</fullName>
    <label>Company Reg Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>