default/objects/Account/fields/Company_Size__c.field-meta.xml
<CustomField>
    <fullName>Company_Size__c</fullName>
    <description>Company size based on number of employees</description>
    <inlineHelpText>Company size based on number of employees
            New range value which should replace the field Employee* in the future</inlineHelpText>
    <label>Company Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Micro (1-9)</fullName>
            </value>
            <value>
                <fullName>Small (10-19)</fullName>
            </value>
            <value>
                <fullName>Medium (20-49)</fullName>
            </value>
            <value>
                <fullName>Corporate (50-249)</fullName>
            </value>
            <value>
                <fullName>Strategic (250+)</fullName>
            </value>
            <value>
                <fullName>Information not available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>