default/objects/Account/fields/Company_status_Crif__c.field-meta.xml
<CustomField>
    <fullName>Company_status_Crif__c</fullName>
    <label>Company status (Crif)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Erased</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>