default/objects/Account/fields/Company_Turnover_Category__c.field-meta.xml
<CustomField>
    <fullName>Company_Turnover_Category__c</fullName>
    <description>BisNode2019 import</description>
    <inlineHelpText>Range based on the company turnover</inlineHelpText>
    <label>Company Turnover Category</label>
    <length>40</length>
    <type>Text</type>
</CustomField>