default/objects/Account/fields/Consent_Form_Datatransfer__c.field-meta.xml
<CustomField>
    <fullName>Consent_Form_Datatransfer__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Consent Form for Datatransfer</inlineHelpText>
    <label>Consent Form Datatransfer</label>
    <type>Checkbox</type>
</CustomField>