default/objects/Account/fields/Consumption_Category__c.field-meta.xml
<CustomField>
    <fullName>Consumption_Category__c</fullName>
    <description>Picklist field set by connection to BizMachine. Indicates Consumption Category of an Account.</description>
    <label>Consumption Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A: 100K+</fullName>
            </value>
            <value>
                <fullName>B: 40K - 100K</fullName>
            </value>
            <value>
                <fullName>C: 20K - 40K</fullName>
            </value>
            <value>
                <fullName>D: 10K - 20K</fullName>
            </value>
            <value>
                <fullName>E: 4K - 10K</fullName>
            </value>
            <value>
                <fullName>F: 0 - 4K</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>