default/objects/Account/fields/Consumption_Category_Percentile__c.field-meta.xml
<CustomField>
    <fullName>Consumption_Category_Percentile__c</fullName>
    <description>Percentile field set by connection to BizMachine. Indicates Consumption Category Percentile of an Account. Related to Consumption Category custom field.</description>
    <label>Consumption Category Percentile</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>