default/objects/Account/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <label>Contact Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>