default/objects/Account/fields/Contact_overdue__c.field-meta.xml
<CustomField>
    <fullName>Contact_overdue__c</fullName>
    <formula>IF(AND(TEXT(Retailer_class__c) = "A",TODAY()&gt;DATE(
            year(Last_contact_date__c)
            + if(month(Last_contact_date__c)+2!=12,floor((month(Last_contact_date__c) + 2)/12),0) + if(and(month(Last_contact_date__c)=12,2&gt;=12),-1,0)
            ,
            if( mod( month(Last_contact_date__c) + 2, 12 ) = 0, 12 , mod( month(Last_contact_date__c) + 2 , 12 ))
            ,
            min(
            day(Last_contact_date__c),
            case(
            max( mod( month(Last_contact_date__c) + 2 , 12 ) , 1),
            9,30,
            4,30,
            6,30,
            11,30,
            2,28,
            31
            )
            )
            )
            )
            ,
            true,

            IF(AND(TEXT(Retailer_class__c) = "B",TODAY()&gt;Last_contact_date__c + 14),true,

            IF(AND(TEXT(Retailer_class__c) = "C",TODAY()&gt;DATE(
            year(Last_contact_date__c)
            + if(month(Last_contact_date__c)+3!=12,floor((month(Last_contact_date__c) + 3)/12),0) + if(and(month(Last_contact_date__c)=12,3&gt;=12),-1,0)
            ,
            if( mod( month(Last_contact_date__c) + 3, 12 ) = 0, 12 , mod( month(Last_contact_date__c) + 3 , 12 ))
            ,
            min(
            day(Last_contact_date__c),
            case(
            max( mod( month(Last_contact_date__c) + 3 , 12 ) , 1),
            9,30,
            4,30,
            6,30,
            11,30,
            2,28,
            31
            )
            )
            )
            )
            ,
            true, false)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the box is checked the retailer should be contacted according to the contact schedule</inlineHelpText>
    <label>Contact overdue</label>
    <type>Checkbox</type>
</CustomField>