default/objects/Account/fields/Cor_bank_account__c.field-meta.xml
<CustomField>
    <fullName>Cor_bank_account__c</fullName>
    <description>КС (корреспондентский счет)</description>
    <label>Сorrespondent bank account</label>
    <length>30</length>
    <type>Text</type>
</CustomField>