default/objects/Account/fields/CR_Type__c.field-meta.xml
<CustomField>
    <fullName>CR_Type__c</fullName>
    <label>CR_Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MW</fullName>
            </value>
            <value>
                <fullName>not branded</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Shell (Select)</fullName>
            </value>
            <value>
                <fullName>Shell (Select) NSC</fullName>
            </value>
            <value>
                <fullName>Shell (Select) NSC Light</fullName>
            </value>
            <value>
                <fullName>SPAR express</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>