default/objects/Account/fields/CREFONR__c.field-meta.xml
<CustomField>
    <fullName>CREFONR__c</fullName>
    <label>CREFONR</label>
    <length>10</length>
    <type>Text</type>
</CustomField>