default/objects/Account/fields/CustomBillingArea__c.field-meta.xml
<CustomField>
    <fullName>CustomBillingArea__c</fullName>
    <label>CustomBillingArea</label>
    <length>255</length>
    <type>Text</type>
</CustomField>