default/objects/Account/fields/CustomBillingState__c.field-meta.xml
<CustomField>
    <fullName>CustomBillingState__c</fullName>
    <label>Custom Billing State</label>
    <length>150</length>
    <type>Text</type>
</CustomField>